examples/jdesk-notes: tabs, Files sidebar, session restore, tray, autostart
Expand the Notes example into a fuller desktop app and verify each surface on real
Windows 11 (WebView2 150.0.4078.65):

- Browser-style tabs with a + button; per-tab file/untitled buffers and dirty markers
  (Ctrl+T/W/Tab). New commands on NotesService: readFile, openFolder, listDir.
- Files sidebar (toggle with the menu button): open a folder via the native folder
  chooser or by typing a path, click a file to open it in a tab, navigate subfolders.
- Session persistence: open tabs (including unsaved content) are stored under
  ~/.jdesk/dev.jdesk.examples.notes/session.json (opaque page-owned JSON) and restored
  on the next launch — verified across a restart and across the dev->packaged boundary.
- System tray (Show / Start with Windows / Quit) via ApplicationHandle.createTrayItem.
  Closing the window hides to the tray (onCloseRequested veto + hide) instead of quitting,
  so the app keeps running — this exercised the Win32 Shell_NotifyIconW path at runtime for
  the first time (it was compile-verified only). "Start with Windows" toggles the HKCU Run
  autostart key against the process launcher.

Also verified: jpackage app-image + MSI (WiX) both run standalone with no dev Java on PATH
(bundled JRE, UI served from the classpath web/ module, WebView2Loader.dll beside the exe).
Docs updated in docs/verification/windows-local-2026-07-12.md.

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>